Fix gallery wrapping

--- a/src/assets/style/ghost/_gallery.scss
+++ b/src/assets/style/ghost/_gallery.scss
@@ -4,7 +4,7 @@
   }
 
   &-row {
-    @apply -mx-4 w-full;
+    @apply -mx-4 w-full flex;
   }
 
   &-image {
